# pharos-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pharos-report.html  pyproject.toml  requirements.txt
.github/workflows/: python.yml
docs/screenshots/: README.md
examples/: sample-output.json
pharos/: banner.py  classifier.py  cli.py  exporters.py  report.py  scanner.py
tests/: test_classifier.py
